feat: refactor code & add graph4j logic